ultimas alteraçoes estruturais de todas as classes java e angualr

--- a/src/main/webapp/i18n/pt-br/cardapio.json
+++ b/src/main/webapp/i18n/pt-br/cardapio.json
@@ -20,7 +20,7 @@
       "id": "ID",
       "nome": "Nome",
       "dataCriacao": "Data Criacao",
-      "ativo": "Ativo",
+      "ativo": "Status do Cadapio.",
       "produto": "Produto",
       "estabelecimento": "Estabelecimento"
     }
