--- a/src/main/webapp/i18n/pt-br/produto.json
+++ b/src/main/webapp/i18n/pt-br/produto.json
@@ -22,7 +22,7 @@
       "descricao": "Descricao",
       "preco": "Preco",
       "desconto": "Desconto",
-      "imagens": "Imagens",
+      "imagemProduto": "Imagem Produto",
       "categoriaProduto": "Categoria Produto",
       "cardapio": "Cardapio"
     }
