alterações no front end

--- a/src/main/webapp/i18n/pt-br/global.json
+++ b/src/main/webapp/i18n/pt-br/global.json
@@ -40,7 +40,7 @@
       "language": "Idioma"
     },
     "form": {
-      "username.label": "Usuário",
+      "username.label": "E-mail/Usuario",
       "username.placeholder": "Seu usuário",
       "currentpassword.label": "Senha atual",
       "currentpassword.placeholder": "Senha atual",
