--- a/src/main/webapp/i18n/pt-br/login.json
+++ b/src/main/webapp/i18n/pt-br/login.json
@@ -1,6 +1,6 @@
 {
   "login": {
-    "title": "Autenticação",
+    "title": "",
     "form": {
       "password": "Senha",
       "password.placeholder": "Sua senha",
